--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <script type="module" src="./generative-ai.js"></script>
-  <script src="apikey.js"></script>
+  <script src="./apikey.js"></script>
 
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
