--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="Untree.co">
-	<link rel="shortcut icon" href="favicon.png">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	<meta name="author" content="JHL">
+	<link rel="shortcut icon" href="./favicon.png">
 
 	<meta name="description" content="" />
 	<meta name="keywords" content="bootstrap, bootstrap5" />
@@ -30,8 +31,7 @@
 	<title>Lucky Vicky Generator</title>
 </head>
 <body>
-  <script type="module" src="./generative-ai.js"></script>
-  <script src="./apikey.js"></script>
+
 
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
@@ -59,8 +59,6 @@
 
 
 		</div>
-
-
 
 		<div class="container">
 			<div class="row justify-content-center align-items-center">
@@ -94,6 +92,8 @@
 							}
 						</style>
 					</form>
+          <script type="module" src="./generative-ai.js"></script>
+          <script src="./apikey.js"></script>
 					<script type="module">
             // Fetch your API_KEY
             import { GoogleGenerativeAI } from './generative-ai.js';
