--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             import { GoogleGenerativeAI } from './generative-ai.js';
 
             const API_KEY = config.apikey;
-            // console.log(API_KEY)
+            console.log(API_KEY)
             // Reminder: This should only be for local testing
 
             // Access your API key (see "Set up your API key" above)
